--- a/src/views/pages/research/research-articles/research-articles.njk
+++ b/src/views/pages/research/research-articles/research-articles.njk
@@ -4,7 +4,7 @@
 {% from "universal/_header.njk" import header %}
 {{ header(bs4=bs4) }}
 
-<body class="auth-theme-rashmore">
+<body>
   {% from "universal/_navbar-bs4.njk" import navbar %}
   {{ navbar("Research", "Research Articles") }}
 
