Final move to BS4

--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!-->
+{% set bs4 = true %}
 <html class="no-js" lang="en">
-<!--<![endif]-->
-<!--I can write -->
 {% from "universal/_header.njk" import header %}
-{{ header() }}
+{{ header(bs4=bs4) }}
 
 <body class="auth-theme-rashmore">
-  {% from "universal/_navbar.njk" import navbar %}
+  {% from "universal/_navbar-bs4.njk" import navbar %}
   {{ navbar("Contact") }}
 
-  <header class="kbl-header sabbi-page-header page-header-lg">
-      <div class="page-header-content conternt-center">
-          <div class="header-title-block">
-              <h1 class="page-title">Contact</h1>
-          </div>
+  <!--
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("Contact") }}
+
+  {% from "components/breadcrumb.njk" import breadcrumb %}
+  {{ breadcrumb([ {name: "Home", location: "/"}, {name: "Contact", location: ""} ]) }}-->
+
+  <article class="container-fluid kbl-top">
+    <div class="row justify-content-center pt-4">
+      <div class="col-auto">
+        <h1><ion-icon name="call-outline" class="kbl-header-icon"></ion-icon></h1>
       </div>
-  </header>
-  <div class="auth-breadcrumb-wrap">
-      <div class="container">
-          <ol class="breadcrumb sabbi-breadcrumb list-unstyled list-inline">
-              <li><a href="/" class="kbl-link">Home</a></li>
-              <li class="active">Contact</li>
-          </ol>
+      <div class="col-auto pt-3 header-icon-wrapper">
+        <h1>Contact Us!</h1>
+        <h6>
+          See what we're about and give us a call!
+        </h6>
       </div>
-  </div><!-- /.auth-breadcrumb-wrap -->
+    </div>
+  </article>
+
   <section class="sabbi-section stage-future_member">
       <div class="container">
           <div class="row">
@@ -154,7 +155,7 @@
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
-  {{ scripts() }}
+  {{ scripts(bs4=bs4) }}
 </body>
 
 </html>
