--- a/src/views/components/person-card.njk
+++ b/src/views/components/person-card.njk
@@ -2,7 +2,7 @@
   <div class="kbl-person-card-container">
     <div class="kbl-person-card">
       <figure>
-        <img class="w-100 mb-2" style="height: 250px;" src="{{ img }}" alt="sabbi-profile-pic">
+        <img class="w-100 mb-2" style="height: 250px;" src="{{ img }}">
         <figcaption class="pb-2">
           <div clas="title-wrapper">
             <div class="card-title px-3 mb-0">{{ name }}</div>
@@ -35,7 +35,7 @@
   </div>
 
   <div class="modal fade" id="{{ person.modifier }}Modal" tabindex="-1">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <section class="modal-header">
           <div class="container-fluid text-left">
