--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -99,37 +99,38 @@
                           or any related discipline in life sciences is required, along with strong evidence of
                           prior productivity and high-impact publications.</p>
                   </div>
-                   <div class = "col-sm-8" id="scroll_contact_form">
-                  <form id="contact-form" class="form-future_memb" action="assets/api/sendmail.php" method="post">
-                      <div>
-                          <input name="name" id="futureName" type="text" class="form-control kbl-form" placeholder="Full Name">
-                      </div>
-                      <div>
-                          <input name="email"  id="InputEmail" type="email" class="form-control kbl-form" placeholder="Email">
-                      </div>
-                      <div>
-                          <input  name="contact_num" id="Inputphone" type="tel" class="form-control kbl-form"  placeholder="Phone Number">
-                      </div>
-                      <div>
-                          <textarea name="message"  id="InputMessage" class="form-control kbl-form" rows="15" placeholder="Say something to us!"></textarea>
-                      </div>
+                  <div class = "col-sm-8" id="scroll_contact_form">
+                    <form id="contact-form" class="form-future_memb" action="assets/api/sendmail.php" method="post">
+                        <div>
+                            <input name="name" id="futureName" type="text" class="form-control kbl-form" placeholder="Full Name">
+                        </div>
+                        <div>
+                            <input name="email"  id="InputEmail" type="email" class="form-control kbl-form" placeholder="Email">
+                        </div>
+                        <div>
+                            <input  name="phone" type="tel" class="form-control kbl-form"  placeholder="Phone Number">
+                        </div>
+                        <div>
+                            <textarea name="message"  id="InputMessage" class="form-control kbl-form" rows="15" placeholder="Say something to us!"></textarea>
+                        </div>
 
-                      <div class="form-group">
-                          <div id="form_success"></div>
-                          <div id="form_errors"></div>
-                          <div class="row">
+                        <div class="form-group">
+                            <div id="form_success"></div>
+                            <div id="form_errors"></div>
+                            <div class="row">
 
-                              <div class="col-sm-6 col-sm-offset-3 text-center">
-                                  <button type="submit" class="btn kbl-btn-1-solid">Send Message</button>
-                              </div>
-                          </div>
-                      </div>
-                  </form><!-- /form.form-future_memb -->
-
+                                <div class="col-sm-6 col-sm-offset-3 text-center">
+                                    <button type="submit" class="btn kbl-btn-1-solid">Send Message</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form><!-- /form.form-future_memb -->
                   </div>
-                  <aside class="col-sm-4">
-                      <iframe src="http://maps.google.com/maps?q=41.742693,-111.810340&amp;z=15&amp;output=embed" style="border:0; height:550px; width:650px" allowfullscreen="" frameborder="0"></iframe>
-                  </aside>
+                  <div class="col-4">
+                    <aside class="embed-responsive embed-responsive-1by1">
+                        <iframe src="http://maps.google.com/maps?q=41.742693,-111.810340&amp;z=15&amp;output=embed" allowfullscreen="" frameborder="0"></iframe>
+                    </aside>
+                  </div>
               </div>
               <aside class="col-sm-4">
                   <address class="addr_future_memb">
@@ -147,7 +148,7 @@
                               <p class="__ci_num">E-mail: <span>rkaundal@usu.edu</span></p>
                       </footer>
                   </address><!-- /.addr_future_memb -->
-                  <a href="#enroll" class="btn kbl-btn-1-solid text-left">Request For Future Member</a>
+                  <a href="/contact#enroll" class="btn kbl-btn-1-solid text-left">Go to Contact Form</a>
               </aside>
           </div>
       </div>
