--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -6,7 +6,7 @@
 
 <body>
   {% from "universal/_navbar-bs4.njk" import navbar %}
-  {{ navbar("Publications", "Journal Articles") }}
+  {{ navbar("Publications") }}
 
 <!--
   <header class="sabbi-page-header-classic page-header-lg">
