Cleaned up research

--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -30,7 +30,7 @@
       <article class="container-fluid kbl-top">
         <div class="row justify-content-center pt-4">
           <div class="col-auto">
-            <h1><ion-icon name="document-outline" class="kbl-header-icon"></ion-icon></h1>
+            <h1><ion-icon name="document-text-outline" class="kbl-header-icon"></ion-icon></h1>
           </div>
           <div class="col-auto pt-3 header-icon-wrapper">
             <h1>Publications</h1>
