Mass delete CSS

--- a/src/views/pages/people/alumni/alumni.njk
+++ b/src/views/pages/people/alumni/alumni.njk
@@ -2,7 +2,7 @@
 {% set bs4 = true %}
 <html class="no-js" lang="en">
 {% from "universal/_header.njk" import header %}
-{{ header("alumni", bs4=bs4) }}
+{{ header(bs4=bs4) }}
 
 <body class="auth-theme-rashmore">
   {% from "universal/_navbar-bs4.njk" import navbar %}
