--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 {% set bs4 = true %}
 {% from "universal/_header.njk" import header %}
-{{ header("people", bs4=bs4) }}
+{{ header(bs4=bs4) }}
 
 <body>
   {% from "universal/_navbar-bs4.njk" import navbar %}
