Added research articles

--- a/src/views/components/article-link.njk
+++ b/src/views/components/article-link.njk
@@ -1,5 +1,5 @@
 {% macro articleLink(article) %}
-  <a class="row kbl-article-link no-gutters" href="#">
+  <a class="row kbl-article-link no-gutters" href="/research/{{ article.link }}">
     <ion-icon name="document-text-outline" class="link-icon col-1 px-2"></ion-icon>
     <span class="title col my-auto text-truncate">{{ article.title }}</span>
   </a>
