--- a/src/views/pages/research/research-articles/articles.njk
+++ b/src/views/pages/research/research-articles/articles.njk
@@ -1,49 +1,56 @@
 {% set template = {
     title: "TEST",
     subtitle: "Details",
-    img: ""
+    img: "",
+    link: "#"
   }
 %}
 
 {% set ai = {
     title: "Artificial Intelligence",
     subtitle: "OMICS big data to novel biological discoveries",
-    img: ""
+    img: "",
+    link: "ai"
   }
 %}
 
 {% set hpi = {
     title: "Host-pathogen Interactions",
     subtitle: "Understanding mechanisms of infectious diseases",
-    img: ""
+    img: "",
+    link: "hpi"
   }
 %}
 
 {% set pfp = {
     title: "Protein Function Prediction",
     subtitle: "Annotation of novel proteomes",
-    img: ""
+    img: "",
+    link: "pfp"
   }
 %}
 
 {% set metagenomics = {
     title: "Metagenomics",
     subtitle: "Bioinformatics solutions for crop improvement",
-    img: ""
+    img: "#",
+    link: "metagenomics"
   }
 %}
 
 {% set pa = {
     title: "Precision Agriculture",
     subtitle: "Robotics for integrated weed management",
-    img: ""
+    img: "",
+    link: "precisionag"
   }
 %}
 
 {% set ngs = {
     title: "NGS Studies",
     subtitle: "Deciphering and making sense of complex -omics big data",
-    img: ""
+    img: "",
+    link: "ngs"
   }
 %}
 
