--- a/src/views/pages/research/template.njk
+++ b/src/views/pages/research/template.njk
@@ -1,4 +1,4 @@
-{% macro newsPage(title='DEFAULT', fileName='', linkName='') %}
+{% macro researchPage(title='DEFAULT', fileName='', linkName='') %}
 {% set file = "pages/research/" + fileName + "/content.njk" %}
 {% set bs4 = true %}
 <!DOCTYPE html>
