Fixed SCSS error

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -55,6 +55,6 @@ nav.bs4 {
 }
 
 .dropdown-item:active {
-  background: $color-bg-main!important;
-  background-color: $color-bg-main!important;
+  background: $color-bg-gray!important;
+  background-color: $color-bg-gray!important;
 }
