--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -46,7 +46,8 @@
     social: []
   }
 %}
-
+<!-- Naveen ResearchGate -->
+<!-- https://www.researchgate.net/profile/Naveen_Duhan -->
 {% set naveen = {
     name: "Naveen Duhan",
     subtitle: "PhD Student | PSC",
@@ -55,7 +56,11 @@
     bio: "",
     email: "naveen.duhan@usu.edu",
     img: "assets/img/profile/1.jpg",
-    social: []
+    social: [
+      {type: "facebook", link: "https://www.facebook.com/navduhan87/"},
+      {type: "twitter", link: "https://twitter.com/navduhan"},
+      {type: "website", link: "naveenduhan.com"}
+    ]
   }
 %}
 
