--- a/src/views/pages/people/people.njk
+++ b/src/views/pages/people/people.njk
@@ -25,7 +25,7 @@
       <div class="col-auto pt-3 header-icon-wrapper">
         <h1>People</h1>
         <h6>
-          A list of studnets and alumni associated with the KAABiL
+          Students and alumni associated with the KAABiL
         </h6>
       </div>
     </div>
