--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -10,5 +10,6 @@ $color-border-gray: #d1d1d1;
 $color-bg-gray: #f2f2f2;
 
 $transparent: rgba(#fff, 0);
+$color-text-hard: #282828;
 $color-text-main: #2d2d2d;
 $color-text-soft: #777;
