--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -29,130 +29,123 @@
     </div>
   </article>
 
-  <section class="sabbi-section stage-future_member">
-      <div class="container">
-          <div class="row">
-              <div class="col-sm-8">
-                  <p class="future_member-text" style="text-align: justify;">
-                      If you would like to join us, we are always looking for <b>independently-funded research fellows</b> or
-                      <b>extended visitors</b>. Please use the <a href="/contact#enroll" class="kbl-link">form</a> below to explore our options.
-                      <b>Summer student</b> positions are also available for up to a 3 - 4 month period.
+  <article class="container mt-5">
+    <section class="row">
+      <div class="col-8">
+        <p class="kbl-text">
+          If you would like to join us, we are always looking for <b>independently-funded research fellows</b> or
+          <b>extended visitors</b>. Please use the <a href="/contact#enroll" class="kbl-link">form</a> below to explore our options.
+          <b>Summer student</b> positions are also available for up to a 3 - 4 month period.
+        </p>
 
-                  </p>
-                  <p class="future_member-text" style="text-align: justify;">A number of research projects are available within  the  general  areas  of
-                                                  bioinformatics,  computational  systems  biology,
-                                                  biological  bigdata  mining, comparative genomics, and functional genomics in KAABiL
-                                                  lab.
-                                                  Postdoctoral researchers, research higher degree (PhD and Masters),
-                                                  honours and undergraduate students are welcome to join our group.</p>
-                  <figure class="future_member-figure">
-                      <img src="assets/img/bio_tech_fall.JPG"  alt="" class="img-responsive">
-                  </figure>
-                  <h2 class="font-md__x stage-vrb-title">Masters and Honors</h2>
-                  <p class="future_member-text" style="text-align: justify;">Students are required to have a good understanding of
-                                          biomolecular sciences and computer programming
-                                          as well as experience in supervised learning and
-                                           unsupervised learning (Bayesian-based).
-                                          Students will need to demonstrate adaptability to the multidisciplinary nature of our projects. Masters and honors students are
-                                          encouraged to <a href="/contact#enroll" class="kbl-link">contact</a> Dr. Kaundal to express interest.
-                                          <b>Both degree options in either the <a target="_blank" rel="noreferrer noopen" href="https://cs.usu.edu/" class="kbl-link">Department of Computer Science</a>
-                                              or <a target="_blank" rel="noreferrer noopen" href="https://psc.usu.edu/" class="kbl-link">Department of Plants, Soils & Climate</a> are available.</b></p>
-                  <div class="__fm_seg" id="join_reaserch_ln">
-                      <figure class="future_member-figure">
-                          <img src="assets/img/colorful.JPG"  alt="" class="img-responsive">
-                      </figure>
-                     <h2 class="font-md__x stage-vrb-title">PhD</h2>
-                     <p style="text-align: justify;">PhD opportunities with government and university-funded scholarships are available each year,
-                                                      both to domestic and international students. Knowledge or experience in using scripting languages (Perl, Python) and
-                                                      statistical/mathematical toolkits (R, Matlab) with some kind of programming experience in
-                                                      any C, C++, or Java is preferable.
-                                                      <b>Both degree options in either the <a target="_blank" href="https://cs.usu.edu/" class="kbl-link">Department of Computer Science</a>
-                                                          or <a target="_blank" href="https://psc.usu.edu/" class="kbl-link">Department of Plants, Soils & Climate</a> are available.</b>
-                                                  </p>
+        <p class="kbl-text">
+          A number of research projects are available within  the  general  areas  of
+          bioinformatics,  computational  systems  biology,
+          biological  bigdata  mining, comparative genomics, and functional genomics in KAABiL
+          lab.
+          Postdoctoral researchers, research higher degree (PhD and Masters),
+          honours and undergraduate students are welcome to join our group.
+        </p>
 
-                     <h3 class="__fm_title" >Key criteria</h3>
-                     <p style="text-align: justify;"><strong >Domestic students</strong> – Students should have strong academic track record
-                                                          (including research and write-up) with first class honours.
-                                                          The student’s research and academic background might be in one or
-                                                          more of biological sciences (plant/animal),
-                                                          mathematics, statistics, computer science, data analytics, biological engineering
-                                                          and related life science disciplines.</p>
-                     <p style="text-align: justify;" class="future_member-text" ><strong>International students</strong> –
-                                                          International students are expected to have masters and honours
-                                                          degrees with a strong academic and research background in a relevant field.
-                                                          An overall IELTS score of 6.0+ with a
-                                                          minimum score of 5 in each band is preferable. This can be subtituted with a TOEFL
-                                                          score of 79+.
-                                                          For more details on eligibility, please visit the USU graduate school
-                                                          <a target="_blank" href="https://gradschool.usu.edu/apply/" class="kbl-link">website</a>. </p>
-                  </div>
-                  <div class="__fm_seg">
-                     <h2 class="font-md__x stage-vrb-title">Postdoctoral Research Fellow</h2>
-                     <p style="text-align: justify;">A postdoctoral research fellow with strong research and publication records in the area
-                                                      of bioinformatics and computational biology is encouraged to
-                                                      directly contact <a href="people/rakesh" class="kbl-link">Dr. Kaundal</a> to express interest.</p>
+        <img src="assets/img/bio_tech_fall.JPG"  alt="" class="img-fluid my-5">
 
-                     <h3 class="__fm_title" id="enroll">Key criteria</h3>
-                     <p style="text-align: justify;" class="future_member-text">A PhD in one or
-                          more biological sciences (plant/animal),
-                          mathematics, statistics, computer science, data analytics, biological engineering,
-                          or any related discipline in life sciences is required, along with strong evidence of
-                          prior productivity and high-impact publications.</p>
-                  </div>
-                  <div class = "col-sm-8" id="scroll_contact_form">
-                    <form id="contact-form" class="form-future_memb" action="assets/api/sendmail.php" method="post">
-                        <div>
-                            <input name="name" id="futureName" type="text" class="form-control kbl-form" placeholder="Full Name">
-                        </div>
-                        <div>
-                            <input name="email"  id="InputEmail" type="email" class="form-control kbl-form" placeholder="Email">
-                        </div>
-                        <div>
-                            <input  name="phone" type="tel" class="form-control kbl-form"  placeholder="Phone Number">
-                        </div>
-                        <div>
-                            <textarea name="message"  id="InputMessage" class="form-control kbl-form" rows="15" placeholder="Say something to us!"></textarea>
-                        </div>
+        <h2 class="kbl-heading dark">Masters and Honors</h2>
+        <p class="kbl-text">
+          Students are required to have a good understanding of biomolecular sciences and computer programming
+          as well as experience in supervised learning and unsupervised learning (Bayesian-based).
+          Students will need to demonstrate adaptability to the multidisciplinary nature of our projects. Masters and honors students are
+          encouraged to <a href="/contact#enroll" class="kbl-link">contact</a> Dr. Kaundal to express interest.
+          <b>Both degree options in either the
+            <a target="_blank" rel="noreferrer noopen" href="https://cs.usu.edu/" class="kbl-link">Department of Computer Science</a>
+            or
+            <a target="_blank" rel="noreferrer noopen" href="https://psc.usu.edu/" class="kbl-link">
+                Department of Plants, Soils & Climate
+            </a> are available.
+          </b>
+        </p>
 
-                        <div class="form-group">
-                            <div id="form_success"></div>
-                            <div id="form_errors"></div>
-                            <div class="row">
+        <img src="assets/img/colorful.JPG"  alt="" class="img-fluid my-5">
 
-                                <div class="col-sm-6 col-sm-offset-3 text-center">
-                                    <button type="submit" class="btn kbl-btn-1-solid">Send Message</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form><!-- /form.form-future_memb -->
-                  </div>
-                  <div class="col-4">
-                    <aside class="embed-responsive embed-responsive-1by1">
-                        <iframe src="http://maps.google.com/maps?q=41.742693,-111.810340&amp;z=15&amp;output=embed" allowfullscreen="" frameborder="0"></iframe>
-                    </aside>
-                  </div>
-              </div>
-              <aside class="col-sm-4">
-                  <address class="addr_future_memb">
-                      <h4 class="entry-title">Address</h4>
-                      <div class="address-entry">
-                              <p class="__adtext">Utah State University</p>
-                              <p class="__ad-num">4700 Old Main Hill</p>
-                              <p class="__ad-num">Logan, UT 84322-4700</p>
-                              <p class="__ad-num">United States of America</p>
-                      </div>
-                      <footer class="contact-info">
-                              <h4 class="entry-title">Contact Information</h4>
-                              <p class="__ci_num">Call: <span>+1 (435)-797-4117</span></p>
-                              <p class="__ci_num">Fax: <span>+1 (435) 797-2766</span></p>
-                              <p class="__ci_num">E-mail: <span>rkaundal@usu.edu</span></p>
-                      </footer>
-                  </address><!-- /.addr_future_memb -->
-                  <a href="/contact#enroll" class="btn kbl-btn-1-solid text-left">Go to Contact Form</a>
-              </aside>
-          </div>
+        <h2 class="kbl-heading dark">PhD</h2>
+        <p class="kbl-text">
+          PhD opportunities with government and university-funded scholarships are available each year
+          to domestic and international students.
+          Knowledge or experience with scripting languages (Perl, Python) and statistical/mathematical toolkits
+          (R, Matlab) with some kind of programming experience in C, C++, or Java is preferable.
+          <b>
+            Both degree options in either the
+            <a target="_blank" href="https://cs.usu.edu/" class="kbl-link">Department of Computer Science</a>
+            or
+            <a target="_blank" href="https://psc.usu.edu/" class="kbl-link">Department of Plants, Soils & Climate</a> are available.
+          </b>
+        </p>
+
+        <h5 class="kbl-heading dark">Key Criteria</h5>
+        <p class="kbl-text">
+          <b>Domestic students</b> – Students should have a strong academic track record
+          (including research and write-up) with first class honours.
+          The student’s research and academic background might be in one or
+          more of biological sciences (plant/animal),
+          mathematics, statistics, computer science, data analytics, biological engineering
+          and related life science disciplines.
+        </p>
+
+        <p class="kbl-text">
+          <b>International students</b> –
+          International students are expected to have masters and honours
+          degrees with a strong academic and research background in a relevant field.
+          An overall IELTS score of 6.0+ with a
+          minimum score of 5 in each band is preferable. This can be subtituted with a TOEFL
+          score of 79+.
+          For more details on eligibility, please visit the USU graduate school
+          <a target="_blank" href="https://gradschool.usu.edu/apply/" class="kbl-link">website</a>.
+        </p>
+
+        <h2 class="kbl-heading dark mt-5">Postdoctoral Research Fellow</h2>
+        <p class="kbl-text">
+          A postdoctoral research fellow with strong research and publication records in the area
+          of bioinformatics and computational biology is encouraged to
+          directly contact <a href="people/rakesh" class="kbl-link">Dr. Kaundal</a> to express interest.
+        </p>
+
+        <!-- Because the person who designed the Navbar is an idiot, this has to have enroll until
+            someone competent fixes the navbar out of the good of their heart -->
+        <h5 class="kbl-heading dark" id="enroll">Key Criteria</h5>
+        <p class="kbl-text">
+          A PhD in one or more biological sciences (plant/animal),
+          mathematics, statistics, computer science, data analytics, biological engineering,
+          or any related discipline in life sciences is required, along with strong evidence of
+          prior productivity and high-impact publications.
+        </p>
       </div>
-  </section><!-- /.stage-future_member -->
+
+      <div class="col-4">
+        <h4 class="kbl-heading dark">Address</h4>
+        <div class="kbl-text">Utah State University</div>
+        <div class="kbl-text">4700 Old Main Hill</div>
+        <div class="kbl-text">Logan, UT 84322-4700</div>
+        <div class="kbl-text">United States of America</div>
+
+        <h4 class="kbl-heading dark mt-3">Contact Information</h4>
+        <div class="kbl-text"><b>Phone:</b> +1 (435)-797-4117</div>
+        <div class="kbl-text"><b>Fax:</b> +1 (435) 797-2766</div>
+        <div class="kbl-text"><b>Email:</b> rkaundal@usu.edu</div>
+
+        <a href="/contact#enroll" class="btn kbl-btn-1-solid text-left mt-4">Go to Contact Form</a>
+      </div>
+    </section>
+
+    <section class="row mt-4">
+      <div class="col-5 text-center">
+        {% include "./_contact-form.njk" %}
+      </div>
+      <div class="col">
+        <div class="embed-responsive embed-responsive-1by1">
+          <iframe src="http://maps.google.com/maps?q=41.742693,-111.810340&amp;z=15&amp;output=embed" allowfullscreen="" frameborder="0"></iframe>
+        </div>
+      </div>
+    </section>
+  </article>
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
